Agrega Docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jwt.secret=sebastianretamal
 
 #mongodb
-spring.data.mongodb.host=209.50.53.84
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=vozy
